# smart_car

./: README.md
MATLAB仿真/: demo.slx  fly.m  fly1.m  t11.m  t12.m  t86.slx
MATLAB仿真/PID算法/: Untitled.m  Untitled2.m  demo.m  motor_pid.m  run.m
MATLAB仿真/fuzzy_tracking_simulink_project/: 1-1.fig  1-2.fig  2-1.fig  2-2.fig  3-1.fig  3-2.fig  4-1.fig  4-2.fig  Copy_of_main.m  fuzzy3in.fis  fuzzy_controller.fis  fuzzy_controller_optimized.fis  fuzzy_gain.fis  main.m  main1.m  mohu.m  readme_simulink.txt  robot_fuzzy_sim.slx  test.m  机器人2-22383211-黄明 - 副本.docx  机器人2-22383211-黄明.docx  汇报稿.docx
MATLAB仿真/控制专题/: create_fuzzyPID_fis.m  d1fis.fis  demo.m  demo1.m  demo2.m  demo3.m  demo_stepper_fuzzy_pid_fixed.m  end_effector_path_mm.csv  firm.m  fuzzyPID.fis  fuzzy_gain.fis  fuzzy_pid.fis  fuzzy_pid_compare.csv  joint_trajectory_deg.csv  main_fuzzyPID_reproduce.m  motor.m  new.m  run_fuzzy_vs_pid.m  sim_fuzzy_pid.m  sim_pid.m  t1.m  t2.fis  t2.slx  t3.slx  test.m  trajectory_output.csv  uncertain_pid.m  untitled.slx.autosave  (+1 more)
test_ws/: d1.sh  使用说明.txt
test_ws/src/pid_planner/: CMakeLists.txt  package.xml  pid_planner_plugin.xml
test_ws/src/pid_planner/include/: pid_planner.h
test_ws/src/pid_planner/nav_lidar/: costmap_common_params.yaml  costmap_common_params_nav2.yaml  costmap_common_params_nav4.yaml  costmap_common_params_shequ.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
test_ws/src/pid_planner/src/: pid_planner.cpp
yolov5-master/: auto_detect.py  auto_detect（复件）.py  detect.py  redme.txt  train.py
(+1110 files in other folders)
