<?xml version="1.0"?>
<package format="2">
  <name>pid_planner</name>
  <version>0.0.0</version>
  <description>The pid_planner package</description>

  
  <maintainer email="demo@todo.todo">demo</maintainer>


  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>


  <export>
   
    <nav_core plugin="${prefix}/pid_planner_plugin.xml"/>
  </export>
</package>
